--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Alexander Maslakov</title>
-	</head>
-	<body>
+<head>
+  <meta charset="utf-8">
+  <title>JS Bin</title>
+  <script src="http://www.dropbox.com/static/api/dropbox-datastores-1.2-latest.js" type="text/javascript"></script>
+</head>
+<body>
 
-		AlexanderMaslakov.me
+  <a id="go" href="#">Go</a>
+  
+  <script>
+    var client = new Dropbox.Client({key: 'kzwctnnbbwlglmq'});
 
-	</body>
+    // Try to finish OAuth authorization.
+    client.authenticate({interactive: false}, function (error) {
+      if (error) {
+        alert('Authentication error: ' + error);
+      }
+    });
+
+    if (client.isAuthenticated()) {
+      // Client is authenticated. Display UI.
+    }
+    
+    document.getElementById('go').onclick = function(event) {
+      event.preventDefault();
+      event.stopPropagation();
+      client.authenticate();
+    };
+  </script>
+  
+</body>
 </html>
