--- a/index.html
+++ b/index.html
@@ -1,33 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>JS Bin</title>
-  <script src="https://www.dropbox.com/static/api/dropbox-datastores-1.2-latest.js" type="text/javascript"></script>
+  <meta charset="utf-8" />
+  <title>...</title>
 </head>
 <body>
 
-  <a id="go" href="#">Go</a>
-  
   <script>
-    var client = new Dropbox.Client({key: 'kzwctnnbbwlglmq'});
-
-    // Try to finish OAuth authorization.
-    client.authenticate({interactive: false}, function (error) {
-      if (error) {
-        alert('Authentication error: ' + error);
-      }
-    });
-
-    if (client.isAuthenticated()) {
-      // Client is authenticated. Display UI.
-    }
-    
-    document.getElementById('go').onclick = function(event) {
-      event.preventDefault();
-      event.stopPropagation();
-      client.authenticate();
-    };
+    location.href = '/gist/';
   </script>
   
 </body>
